--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/config/_colors.scss
@@ -635,3 +635,9 @@ $wishlist-newpdp-button: $red;
 // Advanced Page components.
 $advanced-page-accordion-active-title: $primary_link-active;
 $advanced-page-banner-bg: $_egift_landing_page_banner_bg;
+
+// Shop by Shoe Size Menu
+$shop-by-shoe-size-item: $black;
+$shop-by-shoe-size-item-bg: $white;
+$shop-by-shoe-size-item-bg-hover: $dark-brown;
+$shop-by-shoe-size-item-hover: $white-two;
