CORE-44103: Drupal >> H&M >> Dev >> AE >> There should be a space between inor it should be in or.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
@@ -118,6 +118,10 @@
           }
 
           .hello-member-svg {
+            ~ a {
+              margin-#{$right}: rem(2);
+            }
+
             @include breakpoint($only-mobile) {
               display: inline-block;
             }
