--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2356,3 +2356,9 @@ $hello-member-bd-exp-text: $grey-light;
 $hello-member-bd-close-icon: $white-five;
 $hello-member-promo-guest-bg: $light-yellow;
 $hello-member-promo-guest-pop-title: $_spc-discount-text;
+
+// Shop by filter menu
+$shop-by-filter-attribute-item: $black;
+$shop-by-filter-attribute-item-bg: $white-smoke-light;
+$shop-by-filter-attribute-item-hover: $white-five;
+$shop-by-filter-attribute-item-bg-hover: $brownish-grey;
