--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-shop-by-filter/component/_megamenu-shop-by-filter.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-shop-by-filter/component/_megamenu-shop-by-filter.scss
@@ -1,33 +1,31 @@
 .block-alshaya-main-menu .has--three-levels.menu--one__list-item ul {
-  .shop-by-shoe-size {
+  .shop-by-filter-attribute {
     font-size: initial;
-  
+
     &__label {
       font-size: rem(12);
       color: $mm_l2_link !important;
-      font-weight: 400;
       font-family: $alshaya-bold;
       line-height: 1.4;
     }
-  
+
     &__list {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
       column-gap: rem(12);
       row-gap: rem(12);
       max-width: rem(120);
       padding-top: rem(12);
       padding-inline-start: 0;
     }
-  
+
     &__list-item {
       width: rem(32);
       height: rem(32);
-      background-color: $shop-by-shoe-size-item-bg;
-      
+      background-color: $shop-by-filter-attribute-item-bg;
+
       a {
-        color: $shop-by-shoe-size-item;
+        color: $shop-by-filter-attribute-item;
         font-size: rem(12);
         font-family: $alshaya-bold;
         line-height: rem(14);
@@ -38,12 +36,12 @@
         justify-content: center;
         white-space: nowrap;
       }
-  
+
       &:hover {
-        background-color: $shop-by-shoe-size-item-bg-hover !important;
-  
+        background-color: $shop-by-filter-attribute-item-bg-hover !important;
+
         a {
-          color: $shop-by-shoe-size-item-hover !important;
+          color: $shop-by-filter-attribute-item-hover !important;
         }
       }
     }
