--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/sameday-express-delivery/component/_sameday-express-plp.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/sameday-express-delivery/component/_sameday-express-plp.scss
@@ -1,5 +1,6 @@
 #alshaya-algolia-search,
-#alshaya-algolia-plp {
+#alshaya-algolia-plp,
+#my-wishlist {
   .c-products__item {
     .express_delivery {
       font-size: 0.6875rem;
