CO-105: Verified text theming.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2322,3 +2322,4 @@ $spc-checkout-cod-otp-primary: $mothercare-black;
 $spc-checkout-cod-otp-secondary: $grey-light;
 $cod-otp-field-invalid: $red-error;
 $cod-otp-loader-overlay: $_white_five_alpha_60;
+$cod-otp-success: $_spc-radio-filled;
