CO-104: COD OTP verifying process theming.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -102,6 +102,7 @@ $_postpay_light: #8bafbd;
 $_postpay_dark: #8bafbe;
 $_transparent_overlay: rgba(255, 255, 255, 0);
 $_white_five_alpha_80: rgba(255, 255, 255, 0.8);
+$_white_five_alpha_60: rgba(255, 255, 255, 0.6);
 $_spc_search_icon: #4285f4;
 $_order_limit_txt: #4285f4;
 $_order_limit_light_orange: #ffa6a6;
@@ -2320,3 +2321,4 @@ $hm-loyalty-labels-txt: $grey-light;
 $spc-checkout-cod-otp-primary: $mothercare-black;
 $spc-checkout-cod-otp-secondary: $grey-light;
 $cod-otp-field-invalid: $red-error;
+$cod-otp-loader-overlay: $_white_five_alpha_60;
