CORE-44338: tooltip issue on aura n hello member switch.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
@@ -172,6 +172,7 @@
         bottom: rem(32);
         #{$left}: 50%;
         transform: translateX(-50%);
+        z-index: 1;
 
         html[lang=ar] & {
           transform: translateX(50%);
