--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
@@ -105,11 +105,10 @@
     width: 100%;
     height: 100%;
     background-color: $cod-otp-loader-overlay;
-    z-index: 1;
+    z-index: 2;
 
     .loader-icon {
-      background: url(#{$base_theme_loader_img_directory_path}) #{$left} center no-repeat;
-      background-size: contain;
+      background: url(#{$base_theme_loader_img_directory_path}) center/contain no-repeat;
       width: rem(48);
       height: rem(48);
     }
