CORE-44591: Added width 100% for cart-login and checkout header logo (CORE).

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-login/component/_spc-login-sign-in.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-login/component/_spc-login-sign-in.scss
@@ -540,6 +540,10 @@
 
   .site-brand-home {
     a {
+      img {
+        width: 100%;
+      }
+
       @include breakpoint($only-mobile) {
         margin: 0;
       }
