--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-utils/component/_spc-checkout-header.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-utils/component/_spc-checkout-header.scss
@@ -16,6 +16,10 @@
 
       @include breakpoint($only-mobile) {
         margin: 0;
+
+        img {
+          width: 100%;
+        }
       }
     }
 
