CORE-42330: Fix for FL Navigation fraction units and colors.

--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/components/header/_header-three-level.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/components/header/_header-three-level.scss
@@ -4,6 +4,7 @@
       .menu-two__link-wrapper a {
         @include breakpoint($desktop) {
           font-size: 0.75rem;
+          color: $mm_l2_link_desktop !important;
         }
       }
     }
