--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2361,4 +2361,4 @@ $hello-member-promo-guest-pop-title: $_spc-discount-text;
 $shop-by-filter-attribute-item: $black;
 $shop-by-filter-attribute-item-bg: $white-smoke-light;
 $shop-by-filter-attribute-item-hover: $white-five;
-$shop-by-filter-attribute-item-bg-hover: $brownish-grey;
+$shop-by-filter-attribute-item-bg-hover: $black;
