--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-shop-by-filter/component/_megamenu-shop-by-filter.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/megamenu-shop-by-filter/component/_megamenu-shop-by-filter.scss
@@ -4,7 +4,7 @@
 
     &__label {
       font-size: rem(12);
-      color: $mm_l2_link !important;
+      color: $mm_l2_link_desktop !important;
       font-family: $alshaya-bold;
       line-height: 1.4;
     }
@@ -14,19 +14,19 @@
       grid-template-columns: repeat(3, 1fr);
       column-gap: rem(12);
       row-gap: rem(12);
-      max-width: rem(120);
+      max-width: rem(132);
       padding-top: rem(12);
       padding-inline-start: 0;
     }
 
     &__list-item {
-      width: rem(32);
+      width: rem(36);
       height: rem(32);
       background-color: $shop-by-filter-attribute-item-bg;
 
       a {
         color: $shop-by-filter-attribute-item;
-        font-size: rem(12);
+        font-size: rem(10);
         font-family: $alshaya-bold;
         line-height: rem(14);
         width: 100%;
