CORE-43864: Styles for exclusive coupon code message and tooltip.

--- a/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_bathbodyworks/sass/config/_colors.scss
@@ -682,3 +682,6 @@ $egift-card-thumbnail-border-active: $_plp_cta_hover;
 // Advanced Page components.
 $advanced-page-accordion-active-title: $primary_link-active;
 $advanced-page-banner-bg: $_egift_landing_page_banner_bg;
+
+// Exclusive Coupon Code
+$exclusive-promo-message-text: $peacock-blue;
