--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-cart/component/_spc-promo-code-block.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/spc-cart/component/_spc-promo-code-block.scss
@@ -99,4 +99,11 @@
       color: $spc-promo-code-error;
     }
   }
+
+  #exclusive-promo-message {
+    color: $exclusive-promo-message-text;
+    font-size: rem(14);
+    line-height: rem(18);
+    margin-top: rem(8);
+  }
 }
