--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2356,3 +2356,6 @@ $hello-member-bd-exp-text: $grey-light;
 $hello-member-bd-close-icon: $white-five;
 $hello-member-promo-guest-bg: $light-yellow;
 $hello-member-promo-guest-pop-title: $_spc-discount-text;
+
+// Exclusive Coupon Code
+$exclusive-promo-message-text: $peacock-blue;
