--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-points.scss
@@ -76,6 +76,10 @@
   }
 
   .loyalty-options-guest {
+    .aura-earned-points {
+      padding-#{$left}: rem(16);
+    }
+
     .loyalty-option {
       padding-#{$left}: rem(20);
 
@@ -131,7 +135,8 @@
     }
   }
 
-  .loyalty-options-registered {
+  .loyalty-options-registered,
+  .loyalty-options-guest {
     .aura-earned-points {
       display: flex;
       align-items: center;
