--- a/docroot/themes/custom/transac/alshaya_alo_yoga/conditional-sass/font-face/component/_font-face.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/conditional-sass/font-face/component/_font-face.scss
@@ -3,8 +3,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'Arquitecta Regular';
-  src: url('#{$base_theme_fonts_directory_path}/Arquitecta-Regular.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/Arquitecta-Regular.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Regular.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Regular.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -13,8 +14,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'Arquitecta Bold';
-  src: url('#{$base_theme_fonts_directory_path}/Arquitecta-Bold.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/Arquitecta-Regular.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Bold.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Regular.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -23,8 +25,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'Arquitecta Heavy';
-  src: url('#{$base_theme_fonts_directory_path}/Arquitecta-Heavy.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/Arquitecta-Heavy.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Heavy.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Heavy.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -33,8 +36,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'Arquitecta Black';
-  src: url('#{$base_theme_fonts_directory_path}/Arquitecta-Black.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/Arquitecta-Black.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Black.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/Arquitecta-Black.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -43,8 +47,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'NotoSansArabic Regular';
-  src: url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Regular.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Regular.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Regular.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Regular.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -52,8 +57,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'NotoSansArabic Medium';
-  src: url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Medium.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Medium.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Medium.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Medium.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -61,8 +67,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'NotoSansArabic Bold';
-  src: url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Bold.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Bold.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Bold.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Bold.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -70,8 +77,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'NotoSansArabic Black';
-  src: url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Black.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Black.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Black.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Black.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -79,8 +87,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'NotoSansArabic Semi Bold';
-  src: url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Semibold.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Semibold.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Semibold.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/NotoSansArabic-Semibold.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -88,8 +97,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'ProximaNova Regular';
-  src: url('#{$base_theme_fonts_directory_path}/ProximaNova-Regular.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/ProximaNova-Regular.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/ProximaNova-Regular.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/ProximaNova-Regular.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -97,8 +107,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'ProximaNova Bold';
-  src: url('#{$base_theme_fonts_directory_path}/ProximaNova-Bold.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/ProximaNova-Bold.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/ProximaNova-Bold.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/ProximaNova-Bold.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -106,8 +117,9 @@ $base_theme_fonts_directory_path: '/themes/custom/transac/alshaya_alo_yoga/fonts
 
 @font-face {
   font-family: 'ProximaNova Semi Bold';
-  src: url('#{$base_theme_fonts_directory_path}/ProximaNova-Semibold.woff2') format("woff2"),
-  url('#{$base_theme_fonts_directory_path}/ProximaNova-Semibold.woff') format("woff");
+  src:
+    url('#{$base_theme_fonts_directory_path}/ProximaNova-Semibold.woff2') format("woff2"),
+    url('#{$base_theme_fonts_directory_path}/ProximaNova-Semibold.woff') format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
