CORE-44059: H&M || Aura || Submit button looks disabled all the time(not in accordance with the designs).

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-form-fields.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-aura-form-fields.scss
@@ -122,7 +122,7 @@
     border-radius: 0;
     border-top-#{$right}-radius: rem(4);
     border-bottom-#{$right}-radius: rem(4);
-    border: rem(1) solid $aura-spc-textbox-border;
+    border: rem(1) solid $hello-member-loyalty-aura-form-btn-border;
     color: $hello-member-loyalty-aura-form-btn;
     background: $hello-member-loyalty-aura-form-btn-bg;
   }
