--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2326,7 +2326,8 @@ $hello-member-opt-success: $_spc-radio-filled;
 $hello-member-loyalty-labels-txt: $grey-light;
 $hello-member-loyalty-aura-icon: $black-two;
 $hello-member-loyalty-options-border: $white-smoke-light;
-$hello-member-loyalty-aura-form-btn: $_aura-disabled;
+$hello-member-loyalty-aura-form-btn: $lucky-purple-two;
+$hello-member-loyalty-aura-form-btn-border: $lucky-purple-two;
 $hello-member-loyalty-aura-form-btn-bg: $white-five;
 $hello-member-loyalty-aura-disable-select-bg: $greyish;
 
