--- a/docroot/themes/custom/transac/alshaya_footlocker/sass/components/header/_header-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_footlocker/sass/components/header/_header-primary.scss
@@ -374,19 +374,8 @@ header {
 
       &:hover {
         .menu--one__link {
+          background: $mm_l1_link_hover_bg;
           border: 0;
-          position: relative;
-
-          &::before {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            height: rem(6);
-            background-image: url('#{$brand_theme_img_directory_path}/icons/menu-hover-barcode.svg');
-            background-repeat: no-repeat;
-            background-position: center;
-          }
         }
       }
 
@@ -399,46 +388,6 @@ header {
 
       .menu--two__list {
         background: $mm_l2_bg;
-
-        .menu--two__list-item {
-          .menu--three__list {
-            li.menu--three__list-item {
-              a:hover::after,
-              &.is_underlined a::after {
-                content: '';
-                position: absolute;
-                bottom: rem(-4);
-                #{$left}: 0;
-                width: 100%;
-                background-color: $mm_l3_link_hover;
-
-                html[lang='ar'] & {
-                  bottom: 0;
-                }
-              }
-
-              a:hover {
-                text-decoration: none;
-                position: relative;
-
-                &::after {
-                  height: rem(2);
-                }
-              }
-
-              &.is_underlined {
-                a {
-                  position: relative;
-                  color: $mm_l3_link_hover !important;
-
-                  &::after {
-                    height: rem(3);
-                  }
-                }
-              }
-            }
-          }
-        }
       }
     }
   }
