--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_product-return-eligibility.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-returns/component/_product-return-eligibility.scss
@@ -55,4 +55,20 @@ body.nodetype--acq_product {
       }
     }
   }
+
+  div[id*="online-returns-pdp"] {
+    .return-eligibility-pdp {
+      font-size: rem(15);
+      line-height: rem(20);
+
+      &::before {
+        content: '';
+        background: url('#{$base_theme_img_directory_path}/icons/style-icons-ui-return.svg') no-repeat;
+        width: rem(30);
+        height: rem(30);
+        margin-#{$right}: rem(12);
+        padding: 0;
+      }
+    }
+  }
 }
