CORE-42994: Fixed build by adding missing color variable in white_label.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -595,6 +595,7 @@ $mm_l1_link_hover: $marine-blue;
 $mm_l1_link_hover_border_to_fill_space: $white-five;
 $mm_l1_link_active_border: $marine-blue;
 $mm_l2_link: $marine-blue;
+$mm_l2_link_desktop: $black;
 $mm_l2_link_hover: $white-five;
 $mm_l2_p: $brownish-grey;
 $mm_l3_link: $grey-ash;
