CORE-43664: Mobile | SRP: Search and back icon overlap with each other.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -362,6 +362,19 @@
               visibility: visible;
             }
           }
+
+          &.clear-icon {
+            #alshaya-algolia-autocomplete {
+              .react-autosuggest__container {
+                @include breakpoint($upto-desktop) {
+                  &::before,
+                  &::after {
+                    opacity: 0;
+                  }
+                }
+              }
+            }
+          }
         }
 
         .algolia-search-back-icon {
