CORE-42708: Added position absolute to newsletter form error message (CORE).

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/components/footer/_footer-primary.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/components/footer/_footer-primary.scss
@@ -322,6 +322,10 @@
       text-align: center;
     }
 
+    .form-item--error-message {
+      position: absolute;
+    }
+
     label {
       line-height: 1.36;
       display: inline-block;
