DIG-11745: Cart return notification theming.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2262,6 +2262,7 @@ $online-return-cancellation-reason: $error-red;
 $online-return-disabled-txt: $white-five;
 $online-return-button-bg: $pumpkin-orange;
 $online-return-light-bg: $white-five;
+$online-return-notification-cart-bg: $bleach_white;
 
 // Hello Member membership success popup
 $hello-member-membership-success-popup-bg: $white-five;
