--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-aura-loyalty/component/_hello-member-spc-loyalty.scss
@@ -20,7 +20,7 @@
 }
 
 .spc-hello-member-checkout-rewards-block {
-  .loaylty-option-text {
+  .loyalty-option-text {
     display: flex;
     align-items: center;
     font-size: rem(16);
