CORE-43961: VS PROD | Mobile: Shop and Signin Tabs are not coming when Aura is enabled.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/algolia-search/component/_algolia-react-search-block.scss
@@ -1,6 +1,12 @@
 .block-alshaya-algolia-react-autocomplete {
   background-color: $algolia-search-bar-background;
 
+  .menu--open & {
+    @include breakpoint($upto-desktop) {
+      visibility: hidden !important;
+    }
+  }
+
   .algolia-search-cleartext-icon {
     position: absolute;
     #{$right}: 3.5rem;
