--- a/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
@@ -1,7 +1,8 @@
 #alshaya-algolia-search,
 .block-alshaya-algolia-react-plp,
 .block-alshaya-algolia-react-promotion,
-.block-alshaya-algolia-react-product-list {
+.block-alshaya-algolia-react-product-list,
+.block-alshaya-algolia-listing-v2 {
   .filter-fixed-top {
     .show-all-filters-algolia {
       &.empty-category {
