--- a/docroot/themes/custom/transac/alshaya_muji/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
+++ b/docroot/themes/custom/transac/alshaya_muji/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
@@ -1,6 +1,7 @@
 #alshaya-algolia-search,
 .block-alshaya-algolia-react-plp,
-.block-alshaya-algolia-react-promotion {
+.block-alshaya-algolia-react-promotion,
+.block-alshaya-algolia-listing-v2 {
   .filter-fixed-top {
     .show-all-filters-algolia,
     .block-facet-blockcategory-facet-search,
