CORE-44825: Fixed express delivery labels for mobile view on magazine layout.

--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full-magazine.html.twig
@@ -74,7 +74,7 @@
 
         {# Delivery options will load if express delivery enabled. #}
         {% if content.delivery_options %}
-          <div id="sdd-ed-labels"></div>
+          <div id="sdd-ed-labels-desktop" class="express-delivery active desktop"></div>
         {% elseif content.same_day_delivery_text and content.delivery_options is empty %}
           <div class="same-day-delivery">
             <div class="same-day-content">
