CORE-44372: Added .block-alshaya-algolia-react-promotion-v2 wherever .block-alshaya-algolia-react-promotion was used (CORE).

--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
@@ -25,7 +25,8 @@
 body:not(.hide-header) {
   .block-alshaya-algolia-react-plp,
   .block-alshaya-algolia-react-promotion,
-  .block-alshaya-algolia-listing-v2 {
+  .block-alshaya-algolia-listing-v2,
+  .block-alshaya-algolia-react-promotion-v2 {
     .filter-fixed-top {
       .show-all-filters-algolia,
       .block-facet-blockcategory-facet-search,
