--- a/docroot/themes/custom/transac/alshaya_westelm/sass/components/product-list/_product-list.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/components/product-list/_product-list.scss
@@ -136,7 +136,8 @@
     }
   }
 
-  .block-alshaya-algolia-react-promotion {
+  .block-alshaya-algolia-react-promotion,
+  .block-alshaya-algolia-react-promotion-v2 {
     .c-products-list.product-large {
       @include breakpoint($desktop) {
         .alshaya_search_gallery {
