--- a/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
+++ b/docroot/themes/custom/transac/alshaya_debenhams/conditional-sass/algolia-search/component/_algolia-react-sticky-filter.scss
@@ -2,7 +2,8 @@
 .block-alshaya-algolia-react-plp,
 .block-alshaya-algolia-react-promotion,
 .block-alshaya-algolia-react-product-list,
-.block-alshaya-algolia-listing-v2 {
+.block-alshaya-algolia-listing-v2,
+.block-alshaya-algolia-react-promotion-v2 {
   .filter-fixed-top {
     .show-all-filters-algolia {
       &.empty-category {
