--- a/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
+++ b/docroot/themes/custom/transac/alshaya_white_label/templates/node/node--acq-product--full.html.twig
@@ -89,7 +89,7 @@ set classes = [
 
           {# Delivery options will load if express delivery enabled. #}
           {% if content.delivery_options %}
-            <div id="sdd-ed-labels"></div>
+            <div id="sdd-ed-labels-desktop" class="express-delivery"></div>
           {% elseif content.same_day_delivery_text and content.delivery_options is empty %}
             <div class="same-day-delivery">
               <div class="same-day-content">
