CORE-44409: Global Elements - Footer, Breadcrumb.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_colors.scss
@@ -93,6 +93,9 @@ $footer_link_mobile: $white;
 $footer_link: $white;
 $footer_link_hover: $white;
 $social-icons-bg: $black;
+$footer-bg: $black;
+$footer-text: $white;
+$footer-newsletter-text: $chicago;
 
 // Titles.
 $page_title: $black;
