--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/ltr-print.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/ltr-print.scss
@@ -11,6 +11,7 @@
 @import "../../alshaya_white_label/sass/config/**/*";
 @import "config/**/*";
 @import "../../alshaya_white_label/sass/utils";
+@import "utils";
 
 // Utilities for building multilingual websites.
 @import "../../alshaya_white_label/sass/directional";
@@ -28,3 +29,4 @@
 // Design components are reusable styling that can be applied using just the CSS
 // class names specified in the component. Also known as design 'modules'.
 @import "../../alshaya_white_label/sass/components/**/*";
+@import "components/**/*";
