CORE-44409: Global Elements - Footer, Breadcrumb.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/footer/_footer-secondary.scss
@@ -27,6 +27,10 @@
     @include breakpoint($upto-tablet) {
       text-align: $left;
     }
+
+    @include breakpoint($only-mobile) {
+      color: $footer-text;
+    }
   }
 
   .c-footer__logos {
