CORE-44892: Adjust heights for optimised svg logos.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-header.scss
@@ -6,4 +6,16 @@
       }
     }
   }
+
+  .branding__menu {
+    .c-header__region {
+      .block-system-branding-block {
+        .site-brand-home {
+          img {
+            height: rem(20);
+          }
+        }
+      }
+    }
+  }
 }
