--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -136,4 +136,13 @@
       }
     }
   }
+
+  .block-alshaya-super-category {
+    .brand-american-eagle {
+      img {
+        height: rem(11);
+        margin: rem(4) auto;
+      }
+    }
+  }
 }
