--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/postpay-pdp/component/_postpay-pdp.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/postpay-pdp/component/_postpay-pdp.scss
@@ -1,3 +1,8 @@
 .postpay {
-  margin-top: 0.375rem;
+  margin-top: rem(6);
+
+  &.mobile-only-show {
+    margin-left: rem(10);
+    margin-right: rem(10);
+  }
 }
