--- a/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_westelm/sass/config/_colors.scss
@@ -683,3 +683,10 @@ $egift-myaccount-topup-button-text: $WE_white;
 // Advanced Page components.
 $advanced-page-accordion-active-title: $WE_metallic_gold;
 $advanced-page-banner-bg: $WE_light_yellow;
+
+// PLP Quick view drawer.
+$plp-quick-view-product-size-text: $WE_grey_three;
+$plp-quick-view-product-size-border: $WE_grey_three;
+$plp-quick-view-product-size-border-hover: $WE_grey_three;
+$plp-quick-view-product-size-active-bg: $WE_grey_three;
+$plp-quick-view-product-size-text-disabled: $WE_grey_three;
