--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/footer/_footer-secondary.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/footer/_footer-secondary.scss
@@ -5,7 +5,7 @@
     }
 
     p {
-      font-family: $ay-nova-regular;
+      font-family: $alshaya-thin;
       font-size: rem(16);
       color: $footer-bg;
 
