--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/social-links/_social-links.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/social-links/_social-links.scss
@@ -3,7 +3,7 @@
     &::before {
       @include ic-social;
 
-      background-image: url(#{$ay_theme_img_directory_path}/icons/facebook.png);
+      background-image: url(#{$ay_theme_img_directory_path}/icons/facebook.svg);
     }
   }
 
@@ -11,7 +11,7 @@
     &::before {
       @include ic-social;
 
-      background-image: url(#{$ay_theme_img_directory_path}/icons/instagram.png);
+      background-image: url(#{$ay_theme_img_directory_path}/icons/instagram.svg);
     }
   }
 
@@ -19,7 +19,7 @@
     &::before {
       @include ic-social;
 
-      background-image: url(#{$ay_theme_img_directory_path}/icons/twitter.png);
+      background-image: url(#{$ay_theme_img_directory_path}/icons/twitter.svg);
     }
   }
 
@@ -27,7 +27,7 @@
     &::before {
       @include ic-social;
 
-      background-image: url(#{$ay_theme_img_directory_path}/icons/youtube.png);
+      background-image: url(#{$ay_theme_img_directory_path}/icons/youtube.svg);
     }
   }
 
@@ -35,7 +35,7 @@
     &::before {
       @include ic-social;
 
-      background-image: url(#{$ay_theme_img_directory_path}/icons/pinterest.png);
+      background-image: url(#{$ay_theme_img_directory_path}/icons/pinterest.svg);
     }
   }
 
@@ -43,7 +43,7 @@
     &::before {
       @include ic-social;
 
-      background-image: url(#{$ay_theme_img_directory_path}/icons/tiktok.png);
+      background-image: url(#{$ay_theme_img_directory_path}/icons/tiktok.svg);
     }
   }
 }
