--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_fonts.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_fonts.scss
@@ -51,11 +51,9 @@ $alshaya-icons: 'alshaya-icons';
 $body_font: $ay-regular;
 
 // Override font variables coming from MC, without this we get a 404 as font files are no longer present in AY theme.
-$arial: $ay-regular;
-$arial-nodir: $ay-regular;
-$alshaya-bold: $ay-bold;
+$arial: $ay-nova-regular;
+$arial-nodir: $ay-nova-regular;
+$alshaya-bold: $ay-nova-bold;
 $alshaya-arabic-bold: $ay-arabic-bold;
-$alshaya-thin: $ay-regular;
+$alshaya-thin: $ay-nova-regular;
 $alshaya-arabic-thin: $ay-arabic-regular;
-$campaign-plp-style-1-font: $ay-regular;
-$campaign-plp-style-1-arabic-font: $ay-arabic-regular;
